--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/pickers": "^3.2.10",
+    "@syncfusion/ej2-base": "^18.2.44",
+    "@syncfusion/ej2-react-dropdowns": "^18.2.46",
+    "@syncfusion/ej2-react-grids": "^18.2.46",
+    "@syncfusion/ej2-react-schedule": "^18.2.46",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "date-fns": "^2.15.0",
+    "material-ui-pickers": "^2.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-time-range": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
